--- a/src/style.css
+++ b/src/style.css
@@ -2,15 +2,7 @@
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  /*color-scheme: light dark;*/
-  /*color: rgba(255, 255, 255, 0.87);*/
   background-color: whitesmoke;
-
-  /*font-synthesis: none;*/
-  /*text-rendering: optimizeLegibility;*/
-  /*-webkit-font-smoothing: antialiased;*/
-  /*-moz-osx-font-smoothing: grayscale;*/
 }
 
 :root {
@@ -26,21 +18,8 @@
   width: 16px;
 }
 
-
-/*a {*/
-/*  font-weight: 500;*/
-/*  color: #646cff;*/
-/*  text-decoration: inherit;*/
-/*}*/
-/*a:hover {*/
-/*  color: #535bf2;*/
-/*}*/
-
 body {
   margin: 0;
-  /*display: flex;*/
-  /*place-items: center;*/
-
     max-width: 100vw;
     min-height: 100dvh;
 }
@@ -48,61 +27,6 @@ body {
 .footer {
   border-top: 1px solid #dee2e6;
 }
-
-/*h1 {*/
-/*  font-size: 3.2em;*/
-/*  line-height: 1.1;*/
-/*}*/
-
-/*button {*/
-/*  border-radius: 8px;*/
-/*  border: 1px solid transparent;*/
-/*  padding: 0.6em 1.2em;*/
-/*  font-size: 1em;*/
-/*  font-weight: 500;*/
-/*  font-family: inherit;*/
-/*  background-color: #1a1a1a;*/
-/*  cursor: pointer;*/
-/*  transition: border-color 0.25s;*/
-/*}*/
-/*button:hover {*/
-/*  border-color: #646cff;*/
-/*}*/
-/*button:focus,*/
-/*button:focus-visible {*/
-/*  outline: 4px auto -webkit-focus-ring-color;*/
-/*}*/
-
-/*.card {*/
-/*  padding: 2em;*/
-/*}*/
-
-/*#app {*/
-/*  max-width: 1280px;*/
-/*  margin: 0 auto;*/
-/*  padding: 2rem;*/
-/*  text-align: center;*/
-/*}*/
-
-/*input {*/
-/*  height: 36px;*/
-/*  padding: 4px 8px;*/
-/*  box-sizing: border-box;*/
-/*}*/
-
-/*@media (prefers-color-scheme: light) {*/
-/*  :root {*/
-/*    color: #213547;*/
-/*    background-color: #ffffff;*/
-/*  }*/
-/*  a:hover {*/
-/*    color: #747bff;*/
-/*  }*/
-/*  button {*/
-/*    background-color: #f9f9f9;*/
-/*  }*/
-/*}*/
-
 
 .p-menubar {
   width: 100%;
@@ -143,10 +67,26 @@ body {
   .label {
     font-size: 0.6em;
   }
+
+}
+
+.p-tabmenu.as-tabs {
+  .p-tabmenu-item-link .label {
+    font-size: 0.9em !important;
+  }
+
+  .p-tabmenu-tablist {
+    background: transparent !important;
+  }
 }
 
 
 table, .p-tag-label {
-
   font-size: 0.6em ;
 }
+
+.card {
+  border-radius: 12px;
+  overflow: hidden;
+   box-shadow: 0px 3px 6px 0px rgb(0 0 0 / 39%);
+ }
