--- a/src/style.css
+++ b/src/style.css
@@ -6,11 +6,16 @@
 }
 
 :root {
+  --p-primary-color: darkred !important;
   --p-tabmenu-item-active-color: darkred !important;
   --p-tabmenu-item-active-border-color: darkred !important;
 
   --p-datatable-header-cell-selected-color: darkred !important;
   --p-datatable-header-cell-selected-background : #fff8f8 !important;
+}
+
+.p-tabmenu-item-link {
+  padding: 8px 12px 4px 12px !important
 }
 
 .svg {
@@ -21,7 +26,9 @@
 body {
   margin: 0;
     max-width: 100vw;
-    min-height: 100dvh;
+    height: 100vh;
+    height: 100dvh;
+    height: calc(var(--vh) * 100);
 }
 
 .footer {
@@ -71,12 +78,20 @@ body {
 }
 
 .p-tabmenu.as-tabs {
+  height: 50px;
+
+  .p-tabmenu-item-link {
+
+  }
+
   .p-tabmenu-item-link .label {
     font-size: 0.9em !important;
   }
 
   .p-tabmenu-tablist {
     background: transparent !important;
+    border: none;
+    justify-content: flex-end;
   }
 }
 
