--- a/src/style.css
+++ b/src/style.css
@@ -25,10 +25,14 @@
 
 body {
   margin: 0;
-    max-width: 100vw;
-    height: 100vh;
-    height: 100dvh;
-    height: calc(var(--vh) * 100);
+  max-width: 100vw;
+  height: 100vh;
+  height: 100dvh;
+  height: var(--vh);
+
+  #app {
+    height: 100%;
+  }
 }
 
 .footer {
